--- a/docs/media-object/static/docs/brackets.css
+++ b/docs/media-object/static/docs/brackets.css
@@ -11,11 +11,7 @@ pre {
 }
 
 pre, code {
-    /**
-     * Modified from original font stack of:
-     * source-code-pro, 'Source Code Pro', Courier, monospace
-     */
-    font-family: Consolas, Menlo, Monaco, Courier, monospace !important;
+    font-family: source-code-pro, 'Source Code Pro', Courier, monospace;
     color: #535353;
 }
 
