--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -22,6 +22,20 @@
         </a>
       codenotes:
         - .jump-link__large
+    - name: .jump-link__download (modifier)
+      markup: |
+        <a class="jump-link jump-link__download" href="#">
+            Jump link using the download icon from cf-icons
+        </a>
+      codenotes:
+        - .jump-link__download
+    - name: .jump-link__external-link (modifier)
+      markup: |
+        <a class="jump-link jump-link__external-link" href="#">
+            Jump link using the external-link icon from cf-icons
+        </a>
+      codenotes:
+        - .jump-link__external-link
   tags:
     - cfgov-misc
 */
@@ -53,6 +67,13 @@
         &:after {
             // Inserts the cf-icon-download glyph.
             content: "\e406";
+        }
+    }
+
+    &__external-link {
+        &:after {
+            // Inserts the cf-icon-external-link glyph.
+            content: "\e610";
         }
     }
 
