--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1198,6 +1198,7 @@
     .list__unstyled();
 
     .list_item {
+        display: block;
         margin-bottom: unit(10x / @base-font-size-px, em);
     }
 
