--- a/static/css/main.less
+++ b/static/css/main.less
@@ -107,3 +107,4 @@ img {
 @import (less) "blog-docs.less";
 @import (less) "press-resources.less";
 @import (less) "contact-us.less";
+@import (less) "media.less";
